# eagine

./: .gitignore  CMakeLists.txt  README.md  README.rst  configure.py
benchmark/: Makefile  array_max-1024-4d.cpp  array_max-1024-4f.cpp  array_max-1024-4i.cpp  array_max.ipp  array_min-1024-4d.cpp  array_min-1024-4f.cpp  array_min-1024-4i.cpp  array_min.ipp  array_sum-1024-4d.cpp  array_sum-1024-4f.cpp  array_sum-1024-4i.cpp  array_sum.ipp  common.hpp  fake_use.cxx  fake_use.hpp  make-case-times.gp.dat.py  make-case-times.gp.py  make-run-speedup.gp.dat.py  make-run-speedup.gp.py  make-run-time-diff.gp.dat.py  make-run-time-diff.gp.py  make.gp.dat.py  make.gp.py  math_mat_vec_transf_1-4d.cpp  math_mat_vec_transf_1-4f.cpp  math_mat_vec_transf_1.ipp  math_mat_vec_transf_2-4d.cpp  math_mat_vec_transf_2-4f.cpp  math_mat_vec_transf_2.ipp  math_mat_vec_transf_3-4d.cpp  math_mat_vec_transf_3-4f.cpp  math_mat_vec_transf_3.ipp  math_matrix_gauss_jordan-4d.cpp  math_matrix_gauss_jordan-4f.cpp  math_matrix_gauss_jordan.ipp  math_matrix_mult-4d.cpp  math_matrix_mult-4f.cpp  math_matrix_mult.ipp  math_matrix_mult_1-4d.cpp  (+53 more)
config/: CPP.cmake  Compiler.cmake  FindBoost.cmake
devel/: Makefile  run.sh  test01.cpp  test02.cpp  test03.cpp  test04.cpp  test05.cpp  test06.cpp  test07.cpp  test08.cpp  test09.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test20.cpp  test21.cpp  test22.cpp  test23.cpp  (+6 more)
source/eagine/: CMakeLists.txt
source/eagine/base/: dyn_lib.cpp  format.cpp  guid.cpp  io.cpp  locale.cpp  path.cpp  type_name.cpp
source/eagine/dyli/: detail.cpp  loader.cpp
test/eagine/: CMakeLists.txt  math_close_to.cpp  math_difference.cpp  testing.cmake
test/eagine/base/: CMakeLists.txt  alloc.cpp  array.cpp  format.cpp  guid.cpp  locale.cpp  memory_block.cpp  memory_buffer.cpp  memory_range.cpp  path.cpp  sim_clock.cpp  string.cpp  tribool.cpp  utf8.cpp
test/eagine/math/: CMakeLists.txt  angle.cpp  close_to.cpp  common.hpp  matrix.cpp  matrix1.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  matrix_ctrs.cpp  matrix_ctrs1.cpp  matrix_ctrs2.cpp  matrix_ctrs3.cpp  plane.cpp  quaternion.cpp  scalar.cpp  tmat.cpp  tvec.cpp  vector.cpp  vector_swizzles.cpp  vector_swizzles.ipp
test/eagine/unit/: CMakeLists.txt  dim_derived.cpp  dimension.cpp  info.cpp  quantity.cpp  scales.cpp  si.cpp  unit.cpp
test/eagine/vect/: CMakeLists.txt  abs.cpp  array_ref.cpp  axis.cpp  common.hpp  compare.cpp  data.cpp  fill.cpp  from.cpp  hsum.cpp  lerp.cpp  minmax.cpp  shuffle.cpp
(+278 files in other folders)
